# max31865

./: Cargo.toml  README.md
examples/: rpi.rs
src/: lib.rs  temp_conversion.rs
