[package]
name = "max31865"
version = "0.2.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>", "Isaac Curtis <iicurtis@outlook.com>"]
edition = "2018"
keywords = ["embedded-hal-crate", "rtd-sensor"]
categories = ["embedded", "no-std", "hardware-support"]
description = "generic driver for the MAX31865 RTD to Digital converter"
documentation = "https://iicurtis.github.io/max31865/max31865/index.html"
repository = "https://github.com/iicurtis/max31865"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "^0.2.4", features = ["unproven"] }

[features]
doc = []
